intTests/test_parse_errors/parser006.log.good
 Loading file "parser006.saw"
 Parse error at parser006.saw:3:5-3:15: Unexpected `rebindable'
FAILED
